# joy2uinput

./: .gitignore  Cargo.toml  LICENCE  PACKAGING.md  README.md  build_release  install  install_package  joy2u-mapgen.1  joy2uinput.1  joy2uinput.man
.github/workflows/: tests.yaml
default_conf/:   SIGHT FIGHTER ACTION USB.j2umap   THEC64 Joystick     THEC64 Joystick   .j2umap  . MAGIC-NS2.j2umap  6B Controller.j2umap  8BitDo SN30 Pro+.j2umap  Bensussen Deutsch & Associates,Inc.(BDA) Core (Plus) Wired Controller.j2umap  DragonRise Inc.   Generic   USB  Joystick  .j2umap  JJ.j2umap  Konami Amusement beatmania IIDX controller premium model.j2umap  MAGIC-NS2.j2umap  Microsoft X-Box 360 pad.j2umap  Microsoft X-Box One S pad.j2umap  Nintendo Switch Left Joy-Con.j2umap  Nintendo Switch Pro Controller.j2umap  Nintendo Switch Right Joy-Con.j2umap  Nintendo Wii Remote Classic Controller.j2umap  Nintendo Wii Remote Pro Controller.j2umap  Nintendo Wii Remote.j2umap  Saitek Cyborg V.1 Game Pad.j2umap  Sony Interactive Entertainment Wireless Controller.j2umap  joy2uinput.conf  usb gamepad           .j2umap
example_conf/: joy2uinput.conf
src/: joy2u_mapgen.rs  joy2uinput.rs  map_config.rs  test_utils.rs
